--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://chris-kherk.github.io/Brazawood-1/">https://chris-kherk.github.io/Brazawood-1/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Brazawood/Brazawood-1/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Brazawood/Brazawood-1/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Brazawood/Brazawood-1/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Brazawood/Brazawood-1/index.html</a><br>
+                <a target="_bLank" href="https://endearing-gecko-4d2596.netlify.app">https://endearing-gecko-4d2596.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
